k8s/base/ai-ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-ocr-service
  labels:
    app: ai-ocr
spec:
  selector:
    app: ai-ocr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30004
  type: NodePort
