k8s/base/frontend-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-admin-service
  labels:
    app: frontend-admin
spec:
  selector:
    app: frontend-admin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
