k8s/base/frontend-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-user-service
  labels:
    app: frontend-user
spec:
  selector:
    app: frontend-user
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
  type: NodePort
